# learning_experiences

./: CMakeLists.txt  README.md  basic.cpp  corners.cpp  cv.cpp  depth.cpp  filters.cpp  img.cpp  planner.cxx  planner.h
CPP files/: image_converter.cpp  position_publisher.cpp
State Machine/: FPV.world  planner.cxx  planner.h
fms/: concrete_fms_states.cpp  concrete_fms_states.h  fms.cpp  fms.h  fms_state.h
simulator/: CMakeLists.txt  package.xml  setup.py
simulator/include/simulator/: model.py
simulator/launch/: iris_hovering.launch
simulator/src/: neural_net.py
simulator/urdf/: camera_fpv.gazebo
simulator/worlds/: Iros.world
suas_trajectory_estimation/: README.md
suas_trajectory_estimation/install/: install_ssh.rosinstall
suas_trajectory_estimation/trajectory_generation/cfg/: params.yaml
suas_trajectory_estimation/trajectory_generation/launch/: default.launch
suas_trajectory_estimation/trajectory_generation/src/: dubins_trajectory.cpp  dubins_trajectory_node.cpp
suas_trajectory_estimation/trajectory_generation/worlds/: iros.world
suas_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
suas_ws/logs/trajectory_generation/: build.check.009.log.stderr  build.make.010.log.stderr  (+17 more)
suas_ws/src/: .rosinstall  .rosinstall.bak
trajectory_generation/: CMakeLists.txt  package.xml
trajectory_generation/include/trajectory_generation/: dubins_trajectory.hpp
trajectory_generation/launch/: default.launch
trajectory_generation/src/: dubins_trajectory.cpp
(+30 files in other folders)
