<?xml version="1.0"?>
<package format="2">
  <name>trajectory_generation</name>
  <version>0.0.0</version>

  <description>
    Dubins trajectory generation for MAV.
  </description>

  <author email="gpratyush20@iitk.ac.in">Pratyush Gupta</author>

  <maintainer email="gpratyush20@iitk.ac.in">Pratyush Gupta</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>mav_trajectory_generation_ros</depend>

</package>